<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgclasses"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <include layout="@layout/loading" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:background="@drawable/bgclasses"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:padding="30dp">


              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:gravity="center"
                  >

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/logo_new"
                    />


              </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="20dp"

                    >
                    <com.mobiweb.ibrahim.agenda.Custom.CustomTextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                    <com.mobiweb.ibrahim.agenda.Custom.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/login_message"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="25dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/login_buddy" />

                        </LinearLayout>

                        <EditText
                            android:id="@+id/etUsername"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:background="@color/transparent"
                            android:gravity="center_vertical"
                            android:hint="@string/username"
                            android:paddingLeft="10dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grayline"

                            />

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grayline"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/login_lock" />

                        </LinearLayout>
 <!--                   <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grayline"

                        />-->



                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/etPasswordLayout"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            app:passwordToggleEnabled="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grayline"
                            >

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="@color/transparent"
                                android:hint="@string/password"
                                android:paddingBottom="18dp"
                                android:inputType="textPassword"
                                android:paddingLeft="10dp"
                                android:textColor="@color/white"
                                android:textColorHint="@color/grayline"/>
                        </android.support.design.widget.TextInputLayout>





                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grayline"/>

                    <Button
                        android:id="@+id/btLogin"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/bg_login"
                        android:text="@string/login"
                        android:textColor="@color/white" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>